--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -29,3 +29,49 @@
   border-color: black;
   width: 50%;
 }
+
+table {
+  margin: 0 auto;
+  text-align: center;
+  border-collapse: collapse;
+  border: 1px solid #d4d4d4;
+  font-size: 20px;
+  background: #fff;
+}
+
+table th,
+table tr:nth-child(2n + 2) {
+  background: #e7e7e7;
+}
+
+table th,
+table td {
+  padding: 20px 50px;
+}
+
+table th {
+  border-bottom: 1px solid #d4d4d4;
+}
+
+.stars-outer {
+  display: inline-block;
+  position: relative;
+}
+
+.stars-outer::before {
+  content: '\2606 \2606 \2606 \2606 \2606';
+}
+
+.stars-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.stars-inner::before {
+  content: '\2605 \2605 \2605 \2605 \2605';
+  color: #f8ce0b;
+}
+
