--- a/client/src/styles/RelatedProduct.css
+++ b/client/src/styles/RelatedProduct.css
@@ -1,3 +1,28 @@
+ralated-widget {
+  box-sizing: border-box;
+}
+
+.comparison-modal-container {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.comparison-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -150px 0 0 -250px;
+  z-index: 2000;
+  width: 500px;
+  height: 300px;
+  background: white;
+}
+
 .related-container {
   margin: 20px auto 20px auto;
   width: 100%;
