--- a/client/src/styles/Reviews.css
+++ b/client/src/styles/Reviews.css
@@ -4,6 +4,57 @@
   margin-bottom: 25px;
 }
 
+.card-rating-stars {
+  float: left;
+}
+
+.card-review-name-date {
+  float: right;
+}
+
+.review-tile {
+  margin: 10px;
+}
+
+/* .review-breakdowns-sidebar-title{
+  
+} */
+
+.review-breakdowns-sidebar-container {
+  display: block;
+  float: left;
+  width: 33%;
+}
+
+.review-product-breakdown {
+  display: block;
+}
+
+.review-review-list-container {
+  float: right;
+  width: 67%;
+}
+
 .review-breakdowns {
-  valign: top;
+  padding: 10px;
+}
+
+.product-breakdowns {
+  padding: 10px;
+}
+
+.review-ratings-overall-stars {
+  float: right;
+  padding-top: 10px;
+  margin-left: 5px;
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+.review-ratings-bars-label {
+  width: 10%;
+}
+
+.review-ratings-bar {
+  width: 90%;
 }
