--- a/client/src/styles/RelatedProduct.css
+++ b/client/src/styles/RelatedProduct.css
@@ -13,6 +13,8 @@
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.4);
+  display: block;
+  width: 100%;
 }
 
 .comparison-modal {
@@ -44,6 +46,7 @@
   height: 400px;
   margin: 0 20px 20px 0;
   padding: 0;
+  transition: 0.3s ease all;
 }
 
 .outfit-card {
@@ -62,11 +65,16 @@
   outline: none;
   float: right;
   color: rgb(255, 255, 255);
+  transition: 0.1s ease all;
 }
 
 .related-button:hover {
-  color: rgb(252, 255, 49);
+  color: #ffc107;
   font-size: 130%;
+}
+
+.your-outfit-button.related-button:hover {
+  color: red;
 }
 
 .related-button:focus {
