--- a/client/src/styles/Overview.css
+++ b/client/src/styles/Overview.css
@@ -1,3 +1,7 @@
+#imageGallery {
+  position: relative;
+}
+
 .carousel {
   background-color: rgb(236, 236, 236);
 }
@@ -5,4 +9,60 @@
 .carousel img {
   height: 60vh;
   min-height: 400px;
+  object-fit: contain;
+}
+
+.carousel-control-prev {
+  left: 10%;
+}
+
+#thumbnailCarousel {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 100;
+  width: 10%;
+  min-width: 40px;
+  margin: 0 2.5%;
+  padding: 1% 1%;
+  background-color: rgb(236, 236, 236, 0.5);
+}
+
+.thumbnailContainer {
+  position: relative;
+  margin: 10px 0;
+  outline: none;
+}
+
+.thumbnailContainer:first-of-type {
+  margin-top: 0;
+}
+
+.thumbnailContainer:last-of-type {
+  margin-bottom: 0;
+}
+
+.thumbnailContainer::after {
+  display: block;
+  content: '';
+  padding-top: 100%;
+}
+
+#thumbnailCarousel img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  box-sizing: content-box;
+}
+
+.thumbnailContainer.selected img {
+  border-bottom: 5px solid slategray;
+}
+
+.thumbnailContainer img:hover {
+  border-bottom: 5px solid slategray;
 }
