--- a/client/src/styles/RelatedProduct.css
+++ b/client/src/styles/RelatedProduct.css
@@ -26,27 +26,36 @@
   width: 500px;
   /* height: 300px; */
   background: white;
-  padding: 25px 30px 50px 30px;
+  padding: 25px 30px 50px 0;
   box-shadow: 0 0 20px rgb(58, 58, 58);
 }
 
 .related-container {
   margin: 20px auto 20px auto;
-  width: 100%;
+  width: 1110px;
 }
 
 .related-card-container {
   overflow: scroll;
+  scroll-behavior: smooth;
+}
+
+.related-card-container::-webkit-scrollbar {
+  display: none;
 }
 
 .related-card {
   float: left;
-  width: 250px;
+  width: 275px;
   border: 1px solid rgb(206, 206, 206);
-  height: 400px;
+  height: 420px;
   margin: 0 20px 20px 0;
   padding: 0;
   transition: 0.3s ease all;
+
+.related-card:focus {
+  outline: none;
+
 }
 
 .outfit-card {
@@ -66,6 +75,9 @@
   float: right;
   color: rgb(255, 255, 255);
   transition: 0.1s ease all;
+  z-index: 1000;
+  margin-top: 1px;
+
 }
 
 .related-button:hover {
@@ -134,6 +146,8 @@
 .comparing,
 .related-feature {
   font-weight: 250;
+  text-align: left;
+  padding-left: 52px;
 }
 
 .comparing {
@@ -145,6 +159,7 @@
   color: rgb(0, 0, 0);
   font-size: 1.1rem;
   font-weight: 500;
+  margin-bottom: 20px;
 }
 
 .compare-related-name {
@@ -154,6 +169,14 @@
 
 .related-features {
   margin-bottom: 12px;
+}
+
+.related-features:hover {
+  color: rgb(25, 187, 68);
+}
+
+#feature-description {
+  color: black;
 }
 
 .related-feature {
@@ -166,4 +189,56 @@
 
 .related-related-check {
   text-align: right;
+}
+
+.related-gallery-button {
+  font-size: 25px;
+  color: rgb(121, 121, 121);
+  position: absolute;
+  z-index: 1000;
+  height: 420px;
+  width: 45px;
+  border: none;
+  outline: none;
+  transition: opacity 0.2s linear;
+  opacity: 1;
+  transition: all 0.25s ease;
+}
+
+.related-gallery-button:focus {
+  outline: none;
+}
+
+.related-gallery-button.right {
+  left: 1278px;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.6),
+    rgba(255, 255, 255, 1)
+  );
+}
+
+.related-gallery-button.left {
+  background: linear-gradient(
+    to left,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.6),
+    rgba(255, 255, 255, 1)
+  );
+}
+
+.related-gallery-button:hover {
+  color: rgb(65, 65, 65);
+}
+
+.plus {
+  font-size: 40px;
+  color: rgba(0, 0, 0, 0.6);
+  margin-bottom: 20px;
+}
+
+.hide-button {
+  /* visibility: hidden; */
+  opacity: 0;
 }
