--- a/client/src/styles/RelatedProduct.css
+++ b/client/src/styles/RelatedProduct.css
@@ -52,10 +52,10 @@
   margin: 0 20px 20px 0;
   padding: 0;
   transition: 0.3s ease all;
+}
 
 .related-card:focus {
   outline: none;
-
 }
 
 .outfit-card {
@@ -77,7 +77,6 @@
   transition: 0.1s ease all;
   z-index: 1000;
   margin-top: 1px;
-
 }
 
 .related-button:hover {
