--- a/client/src/styles/RelatedProduct.css
+++ b/client/src/styles/RelatedProduct.css
@@ -5,8 +5,12 @@
   clear: both;
 }
 
+.related-modal-div {
+  transition: 0.3s ease all;
+}
+
 .comparison-modal-container {
-  z-index: 1000;
+  z-index: 1500;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -15,6 +19,11 @@
   background: rgba(0, 0, 0, 0.4);
   display: block;
   width: 100%;
+}
+
+.comparison-modal-container:focus {
+  background: rgba(0, 0, 0, 0.4);
+  cursor: default;
 }
 
 .comparison-modal {
@@ -28,6 +37,8 @@
   background: white;
   padding: 25px 30px 50px 0;
   box-shadow: 0 0 20px rgb(58, 58, 58);
+  border-radius: 1.5%;
+  cursor: default;
 }
 
 .related-container {
@@ -47,7 +58,7 @@
 .related-card {
   float: left;
   width: 275px;
-  border: 1px solid rgb(206, 206, 206);
+  border: 1px solid rgb(218, 218, 218);
   height: 420px;
   margin: 0 20px 20px 0;
   padding: 0;
@@ -167,11 +178,15 @@
 }
 
 .related-features {
-  margin-bottom: 12px;
+  line-height: 2rem;
 }
 
 .related-features:hover {
   color: rgb(25, 187, 68);
+}
+
+#feature-description:hover {
+  color: rgb(0, 0, 0);
 }
 
 #feature-description {
@@ -191,7 +206,7 @@
 }
 
 .related-gallery-button {
-  font-size: 25px;
+  font-size: 30px;
   color: rgb(121, 121, 121);
   position: absolute;
   z-index: 1000;
@@ -209,7 +224,7 @@
 }
 
 .related-gallery-button.right {
-  left: 1278px;
+  left: 1350px;
   background: linear-gradient(
     to right,
     rgba(255, 255, 255, 0),
