--- a/client/src/styles/Overview.css
+++ b/client/src/styles/Overview.css
@@ -28,7 +28,10 @@
 }
 
 #expandBtn {
+  color: gray;
+  color: white;
   background-color: rgba(236, 236, 236, 0.5);
+  /* background-color: rgba(255, 255, 255, 0.8); */
   outline: none;
   position: absolute;
   top: 4%;
