--- a/client/src/styles/Overview.css
+++ b/client/src/styles/Overview.css
@@ -6,7 +6,6 @@
   outline: none;
   transition: 0.1s ease all;
   z-index: 1000;
-  padding: 1px 3px;
 }
 
 #imageGallery {
@@ -27,15 +26,23 @@
   left: 10%;
 }
 
+#imageGallery.ovExpanded .carousel img {
+  height: 80vh;
+}
+
 #expandBtn {
-  color: gray;
+  padding: 2px 4px;
   color: white;
   background-color: rgba(236, 236, 236, 0.5);
-  /* background-color: rgba(255, 255, 255, 0.8); */
+  border-radius: 100%;
   outline: none;
   position: absolute;
   top: 4%;
   right: 4%;
+}
+
+.carousel-indicators li {
+  border-bottom-width: 20px;
 }
 
 #thumbnailCarousel {
@@ -89,4 +96,23 @@
 
 .thumbnailContainer img:hover {
   border-bottom: 5px solid black;
+}
+
+.zoom {
+  position: relative;
+  height: 500px;
+  width: auto;
+  overflow: hidden;
+}
+
+.zoomPhoto {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* transition: transform 0.25s ease-out; */
 }
