Make expanded gallery (#86)
* Update styles on thumbnail carousel

* Fix buggy react-bootstrap carousel not updating

* Add keys to resolve React errors

* create toggle expand button

* update .gitignore

* Make ThumbnailCarousel and ImageCarousel's left button position respond to expanded state

* Conditionally render indicators on expansion

* Style toggle expand button

* Update styles

* Make clicking on image toggle expanded state

* Make working zoomer

* Implement magnification

--- a/client/src/styles/Overview.css
+++ b/client/src/styles/Overview.css
@@ -1,9 +1,17 @@
-#imageGallery {
-  position: relative;
+.ovBtn {
+  background-color: Transparent;
+  /* background-repeat: no-repeat; */
+  border: none;
+  cursor: pointer;
+  outline: none;
+  transition: 0.1s ease all;
+  z-index: 1000;
 }
 
-.carousel {
+#imageGallery {
+  position: relative;
   background-color: rgb(236, 236, 236);
+  height: 60vh;
 }
 
 .carousel img {
@@ -12,8 +20,23 @@
   object-fit: contain;
 }
 
-.carousel-control-prev {
+#imageGallery.ovNormal .carousel-control-prev {
   left: 10%;
+}
+
+#expandBtn {
+  padding: 2px 4px;
+  color: white;
+  background-color: rgba(236, 236, 236, 0.5);
+  border-radius: 100%;
+  outline: none;
+  position: absolute;
+  top: 4%;
+  right: 4%;
+}
+
+.carousel-indicators li {
+  border-bottom-width: 20px;
 }
 
 #thumbnailCarousel {
@@ -67,4 +90,28 @@
 
 .thumbnailContainer img:hover {
   border-bottom: 5px solid black;
+}
+
+.zoom {
+  position: relative;
+  height: 100%;
+  width: auto;
+  overflow: hidden;
+  display: none;
+}
+
+#imageGallery.ovZoomed .zoom {
+  display: block;
+}
+
+.zoomPhoto {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: transform 0.25s ease-out;
 }
