--- a/client/src/styles/Reviews.css
+++ b/client/src/styles/Reviews.css
@@ -6,12 +6,21 @@
   margin-bottom: 25px;
 }
 
+.recommend-percentage {
+  font-size: 13px;
+  padding-bottom: 10px;
+}
+
 .card-rating-stars {
   float: left;
 }
 
 .card-review-name-date {
   float: right;
+}
+
+.shrinkify {
+  font-size: 15.5px;
 }
 
 .review-tile {
@@ -51,10 +60,12 @@
 
 .review-ratings-bars-label {
   width: 10%;
+  padding-bottom: 5px;
 }
 
 .review-ratings-bar {
   width: 90%;
+  margin-top: 6px;
 }
 
 /* Don't judge me CSS is hard :( abandon all hope ye who read after here */
