--- a/client/src/styles/darkmode.css
+++ b/client/src/styles/darkmode.css
@@ -1,8 +1,33 @@
+.Banner {
+  width: 100%;
+  background-color: rgba(70, 70, 70, 0.7);
+  background: linear-gradient(
+    to left,
+    rgba(70, 70, 70, 0.1),
+    rgba(70, 70, 70, 0.5),
+    rgba(70, 70, 70, 1)
+  );
+  height: 75px;
+  /* position: fixed; */
+  top: 0;
+  z-index: 5000;
+  margin-bottom: -5px;
+}
+
+.logo {
+  padding: 25px;
+  height: 100%;
+}
+
+.darkmode .Banner {
+  background: linear-gradient(rgba(38, 38, 38), rgba(24, 24, 24), rgb(0, 0, 0));
+}
+
 .darkmode-button {
   background: none;
   border: none;
   outline: none;
-  color: rgb(255, 225, 0);
+  color: rgba(38, 38, 38);
   position: fixed;
   font-size: 25px;
   right: 15px;
@@ -10,11 +35,14 @@
   transition: 0.2s ease all;
 }
 
+.darkmode .darkmode-button {
+  color: rgb(255, 225, 0);
+}
+
 .darkmode-button:focus {
   background: none;
   border: none;
   outline: none;
-  color: rgb(255, 225, 0);
 }
 
 .darkmode-button:hover {
@@ -46,8 +74,13 @@ body .darkmode {
   );
 }
 
-.darkmode .add-outfit-card-inner {
-  color: rgb(255, 255, 255);
+.darkmode .zoomPhoto {
+  background-color: rgb(17, 17, 17);
+}
+
+.darkmode .add-outfit-card-inner .plus,
+.darkmode .add-outfit-card-inner .add-outfit-title {
+  color: rgb(255, 255, 255) !important;
 }
 
 .darkmode .related-gallery-button {
@@ -62,7 +95,7 @@ body .darkmode {
   background-color: rgba(17, 17, 17, 0.3);
 }
 
-.darkmode #imageGallery {
+#imageGallery {
   margin-bottom: 15px;
 }
 
@@ -107,6 +140,30 @@ body .darkmode {
     #fd522b,
     #fcb045
   );
+}
+
+.darkmode .comparing,
+.darkmode .compare-current-name,
+.darkmode .compare-related-name,
+.darkmode #feature-description {
+  color: white;
+}
+
+.darkmode .related-features:hover {
+  color: #00ffa6;
+}
+
+.darkmode .comparison-modal-container {
+  border: none;
+  outline: none;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+}
+
+.darkmode .comparison-modal {
+  background-color: rgb(103, 103, 103);
+  box-shadow: none;
+  z-index: 2000;
 }
 
 h4 .darkmode {
