--- a/client/src/styles/darkmode.css
+++ b/client/src/styles/darkmode.css
@@ -184,6 +184,10 @@ h4 .darkmode {
   border-color: rgb(114, 114, 114);
 }
 
+.darkmode .btn-light {
+  margin-right: 10px;
+}
+
 .darkmode .btn-outline-secondary:hover {
   background-image: linear-gradient(
     to bottom right,
